--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrito | Bazar Home</title>
   <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
-  <link rel="stylesheet" href="../assets/css/stylesCarrito.css" />
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
 </head>
 
 <body class="layout">
   <header>
     <h1>Bazar Home</h1>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a href="/pages/productos.html">Productos</a></li>
-        <li><a href="#">
-            <img src="/assets/img/carrito.svg" alt="carrito" class="icono-carrito">
-            Carrito (<span id="cartCount">0</span>)</a></li>
+    <nav aria-label="Navegación principal">
+      <button class="menu-toggle" aria-expanded="false" aria-controls="mainmenu" aria-label="Abrir menú">☰</button>
+      <ul id="mainmenu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li>
+          <a href="carrito.html" aria-current="page">
+            <img src="../assets/img/carrito.svg" alt="" class="icono-carrito" aria-hidden="true">
+            Carrito (<span id="cartCount">0</span>)
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -30,6 +30,7 @@
   <main>
     <h2>Tu carrito</h2>
     <section id="carritoVacio" class="empty" hidden>El carrito está vacío.</section>
+
     <section id="carritoTabla">
       <table>
         <thead>
@@ -52,6 +53,7 @@
 
   <script type="module" src="../assets/js/carrito-utils.js"></script>
   <script type="module" src="../assets/js/carrito-page.js"></script>
+  <script type="module" src="../assets/js/menu.js"></script>
 </body>
-
 </html>
+
