--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bazar Home: productos seleccionados para el hogar, organización y mucho más." />
   <meta name="keywords" content="hogar, bazar, organización, cocina, decoración, productos" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
+ <link rel="stylesheet" href="../assets/css/styles.Detalle.css" />
 </head>
 
 <body>
@@ -29,8 +29,10 @@
   </header>
 
   <main>
+    <section id="detalleProducto">
     <div id="detalleProducto"></div>
     <p style="margin-top:1rem;"><a href="productos.html">← Volver a productos</a></p>
+    </section>
   </main>
 
   <footer>
