--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Productos | Bazar Home</title>
-  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
+  <title>Inicio | Bazar Home</title>
+  <meta name="description" content="Bazar Home: productos seleccionados para el hogar, organización y mucho más." />
+  <meta name="keywords" content="hogar, bazar, organización, cocina, decoración, productos" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+ <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
 </head>
 
 <body class="layout">
