--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,6 +14,7 @@
     />
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
+    <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
   </head>
 
   <body class="layout">
