--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito | Bazar Home</title>
-    <meta
-      name="description"
-      content="Bazar Home: revisá y gestioná los productos en tu carrito."
-    />
+    <meta name="description" content="Bazar Home: revisá y gestioná los productos en tu carrito."/>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
     <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
@@ -17,27 +14,14 @@
     <header>
       <h1>Bazar Home</h1>
       <nav aria-label="Navegación principal">
-        <button
-          class="menu-toggle"
-          aria-expanded="false"
-          aria-controls="mainmenu"
-          aria-label="Abrir menú"
-        >
-          ☰
-        </button>
-
+        <button class="menu-toggle" aria-expanded="false" aria-controls="mainmenu" aria-label="Abrir menú">☰</button>
         <ul id="mainmenu">
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="productos.html">Productos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li>
             <a href="carrito.html" aria-current="page">
-              <img
-                src="../assets/img/carrito.svg"
-                alt=""
-                class="icono-carrito"
-                aria-hidden="true"
-              />
+              <img src="../assets/img/carrito.svg" alt="" class="icono-carrito" aria-hidden="true"/>
               Carrito (<span id="cartCount">0</span>)
             </a>
           </li>
@@ -52,40 +36,43 @@
         El carrito está vacío.
       </section>
 
-      <section id="carritoTabla" hidden>
-        <table aria-label="Lista de productos en el carrito">
-          <thead>
-            <tr>
-              <th scope="col">Producto</th>
-              <th scope="col">Precio</th>
-              <th scope="col">Cantidad</th>
-              <th scope="col">Subtotal</th>
-              <th scope="col">Acción</th>
-            </tr>
-          </thead>
-          <tbody id="carritoBody"></tbody>
-        </table>
-
-        <div id="totales" class="totales" aria-live="polite">
-          <div>Total: $<span id="total">0</span></div>
-          <div class="acciones">
-            <button id="vaciarCarrito" class="btn btn-secondary">
-              Vaciar carrito
-            </button>
-            <button id="finalizarCompra" class="btn btn-primary">
-              Finalizar compra
-            </button>
-          </div>
+      <!-- NUEVO: layout en 2 columnas -->
+      <section id="carritoTabla" hidden class="cart-layout">
+        <!-- Columna izquierda: tabla -->
+        <div class="cart-table-wrapper">
+          <table aria-label="Lista de productos en el carrito">
+            <thead>
+              <tr>
+                <th scope="col">Producto</th>
+                <th scope="col">Precio</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Subtotal</th>
+                <th scope="col">Acción</th>
+              </tr>
+            </thead>
+            <tbody id="carritoBody"></tbody>
+          </table>
         </div>
+
+        <!-- Columna derecha: resumen -->
+        <aside class="cart-summary" aria-label="Resumen de compra">
+          <h3>Resumen</h3>
+          <dl class="summary-rows">
+            <div><dt>Items:</dt><dd id="summary-items">—</dd></div>
+            <div><dt>Total:</dt><dd id="summary-total">$ <span id="total">0</span></dd></div>
+          </dl>
+          <div class="summary-actions">
+            <a href="../pages/productos.html" class="btn-outline" id="seguirComprando">Seguir comprando</a>
+            <button id="finalizarCompra" class="btn btn-primary">Finalizar compra</button>
+            <button id="vaciarCarrito" class="btn btn-danger">Vaciar carrito</button>
+          </div>
+        </aside>
       </section>
     </main>
 
-    <footer>
-      <p>&copy; 2025 Bazar Home</p>
-    </footer>
+    <footer><p>&copy; 2025 Bazar Home</p></footer>
 
     <script type="module" src="../assets/js/carrito-utils.js"></script>
-    
     <script type="module" src="../assets/js/menu.js"></script>
   </body>
 </html>
