--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <script type="module" src="assets/js/carrito-utils.js"></script>
     <script type="module" src="assets/js/index.js"></script>
     <script type="module" src="assets/js/menu.js"></script>
+    <script type="module" src="assets/js/productos.js"></script>
+
 
     <noscript>
       <p style="text-align: center; padding: 1rem">
