--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,13 +14,13 @@
     />
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
-    <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
+    <link rel="stylesheet" href="../assets/css/stylesCarrito.css" />
   </head>
 
   <body class="layout">
     <header>
-      <h1>Bazar Home</h1>
-      <nav aria-label="Navegación principal">
+      <nav class="navbar" aria-label="Navegación principal">
+        <!-- 🍔 Hamburguesa a la izquierda -->
         <button
           class="menu-toggle"
           aria-expanded="false"
@@ -30,22 +30,24 @@
           ☰
         </button>
 
-        <ul id="mainmenu">
+        <!-- Menú (colapsable con JS) -->
+        <ul id="mainmenu" class="menu" hidden>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="productos.html" aria-current="page">Productos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li>
-            <a href="carrito.html">
-              <img
-                src="../assets/img/carrito.svg"
-                alt=""
-                class="icono-carrito"
-                aria-hidden="true"
-              />
-              Carrito (<span id="cartCount">0</span>)
-            </a>
-          </li>
         </ul>
+
+        <!-- 🛒 Carrito fijo a la derecha -->
+        <a href="carrito.html" class="cart-link" aria-label="Ir al carrito">
+          <img
+            src="../assets/img/carrito.svg"
+            alt=""
+            class="icono-carrito"
+            aria-hidden="true"
+          />
+          <span class="cart-label">Carrito</span>
+          (<span id="cartCount">0</span>)
+        </a>
       </nav>
     </header>
 
