cambios productos-carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Carrito | Bazar Home</title>
     <meta name="description" content="Bazar Home: revisá y gestioná los productos en tu carrito."/>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
