--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Productos | Bazar Home</title>
     <meta
       name="description"
@@ -37,7 +38,7 @@
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
 
-        <!-- 🛒 Carrito fijo a la derecha -->
+        <!-- 🛒 Carrito: solo ícono + contador -->
         <a href="carrito.html" class="cart-link" aria-label="Ir al carrito">
           <img
             src="../assets/img/carrito.svg"
@@ -45,7 +46,7 @@
             class="icono-carrito"
             aria-hidden="true"
           />
-          <span class="cart-label">Carrito</span>
+          <span class="sr-only">Carrito</span>
           (<span id="cartCount">0</span>)
         </a>
       </nav>
