Mejora en contacto y varias cosas mas

--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -49,8 +49,8 @@
     <main>
       <section id="detalleProducto">
         <div id="detalleProducto"></div>
-        <p style="margin-top: 1rem">
-          <a href="productos.html">← Volver a productos</a>
+        <p style="margin-top: 1rem; text-align: center">
+          <a href="productos.html" class="btn-accion"> ← Volver a productos </a>
         </p>
       </section>
     </main>
