--- a/pages/confirmacioncompra.html
+++ b/pages/confirmacioncompra.html
@@ -4,90 +4,149 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Confirmar compra | Bazar Home</title>
-    <link rel="stylesheet" href="../assets/css/stylesProducto.css" />
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
+
+   
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+   
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+
+
+    <link rel="stylesheet" href="../assets/css/stylesContacto.css" />
+
+ 
     <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
   </head>
 
   <body class="page-confirmacion">
-   
+    <header>
+      <nav class="navbar" aria-label="Navegación principal">
+        <button
+          class="menu-toggle"
+          aria-expanded="false"
+          aria-controls="mainmenu"
+          aria-label="Abrir menú"
+        >
+          ☰
+        </button>
 
-    <main class="container py-5">
-      <div class="text-center mb-4">
-        <h1 class="display-6 text-primary mb-2">Confirmar compra</h1>
-        <p class="text-muted mb-0">
+        <ul id="mainmenu" class="menu" hidden>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+
+        <a href="carrito.html" class="cart-link" aria-label="Ir al carrito">
+          <img
+            src="../assets/img/carrito.svg"
+            alt="Carrito de compras"
+            class="icono-carrito"
+          />
+          (<span id="cartCount">0</span>)
+        </a>
+      </nav>
+    </header>
+
+    <div class="topbar w-100"></div>
+
+  
+    <main class="container main-contacto mt-4">
+      <section class="contacto-section">
+        <h2 class="titulo-contacto">Confirmar compra</h2>
+        <p class="intro-contacto">
           Completá el formulario para confirmar tu compra.
         </p>
-      </div>
 
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-8 col-xl-7">
-          <form id="form-confirmacion" class="card card-confirmacion p-4">
-            <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input
-                type="text"
-                id="nombre"
-                name="nombre"
-                class="form-control"
-                placeholder="Tu nombre completo"
-                required
-              />
-            </div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8 col-xl-7">
+            <div class="card shadow-sm card-contacto">
+              <div class="card-body p-4 p-md-5">
+                <form id="form-confirmacion">
+                  <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input
+                      type="text"
+                      id="nombre"
+                      name="nombre"
+                      class="form-control"
+                      placeholder="Tu nombre completo"
+                      required
+                    />
+                  </div>
 
-            <div class="mb-3">
-              <label for="direccion" class="form-label">Dirección</label>
-              <input
-                type="text"
-                id="direccion"
-                name="direccion"
-                class="form-control"
-                placeholder="Dirección de envío"
-                required
-              />
-            </div>
+                  <div class="mb-3">
+                    <label for="direccion" class="form-label">Dirección</label>
+                    <input
+                      type="text"
+                      id="direccion"
+                      name="direccion"
+                      class="form-control"
+                      placeholder="Dirección de envío"
+                      required
+                    />
+                  </div>
 
-            <div class="mb-3">
-              <label for="email" class="form-label">Correo electrónico</label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                class="form-control"
-                placeholder="nombre@ejemplo.com"
-                required
-              />
-            </div>
+                  <div class="mb-4">
+                    <label for="email" class="form-label"
+                      >Correo electrónico</label
+                    >
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      class="form-control"
+                      placeholder="nombre@ejemplo.com"
+                      required
+                    />
+                  </div>
 
-            <div class="text-center mt-4">
-              <button type="submit" class="btn btn-primary px-4">
-                CONFIRMAR COMPRA
-              </button>
+                  <div
+                    class="d-flex justify-content-center mt-4 flex-wrap contacto-acciones"
+                  >
+                    <button
+                      type="submit"
+                      class="btn btn-primary btn-sm px-4 btn-contacto"
+                    >
+                      Confirmar compra
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
-          </form>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
 
+    <footer>
+      <p>&copy; 2025 Bazar Home</p>
+    </footer>
+
     <script>
-     
       document.addEventListener("DOMContentLoaded", () => {
         const form = document.getElementById("form-confirmacion");
 
         if (!form) return;
 
         form.addEventListener("submit", function (e) {
-          e.preventDefault(); 
+          e.preventDefault();
 
           alert(
             "¡Gracias por tu compra!\n\nPronto nos pondremos en contacto para coordinar la entrega."
           );
-
-          
         });
       });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+ 
+    <script type="module" src="../assets/js/carrito-utils.js"></script>
+    <script type="module" src="../assets/js/menu.js"></script>
 
    
     <script src="../assets/js/validacioncompra.js?v=2" defer></script>
