Revert "Mejora contacto varios"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav class="navbar" aria-label="Navegación principal">
- 
+  <!-- 🍔 Hamburguesa a la izquierda -->
   <button
     class="menu-toggle"
     aria-expanded="false"
@@ -30,14 +30,14 @@
     ☰
   </button>
 
-  
+  <!-- Menú (colapsable con JS) -->
   <ul id="mainmenu" class="menu" hidden>
     <li><a href="index.html" aria-current="page">Inicio</a></li>
     <li><a href="pages/productos.html">Productos</a></li>
     <li><a href="pages/contacto.html">Contacto</a></li>
   </ul>
 
-
+  <!-- 🛒 Carrito fijo a la derecha -->
   <a href="pages/carrito.html" class="cart-link" aria-label="Ir al carrito">
     <img
       src="assets/img/carrito.svg"
