--- a/pages/confirmacioncompra.html
+++ b/pages/confirmacioncompra.html
@@ -5,20 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Confirmar compra | Bazar Home</title>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
-
-   
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-   
     <link rel="stylesheet" href="../assets/css/styles.css" />
-
-
-    <link rel="stylesheet" href="../assets/css/stylesContacto.css" />
-
- 
+    <link rel="stylesheet" href="../assets/css/styles.Contacto.css" />
     <link rel="stylesheet" href="../assets/css/styles.Carrito.css" />
   </head>
 
@@ -66,7 +58,7 @@
             <div class="card shadow-sm card-contacto">
               <div class="card-body p-4 p-md-5">
                 <form id="form-confirmacion">
-                  <div class="mb-3">
+                   <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
                     <input
                       type="text"
@@ -75,7 +67,12 @@
                       class="form-control"
                       placeholder="Tu nombre completo"
                       required
-                    />
+                      minlength="3"
+                      maxlength="50"
+                      pattern="^[A-Za-zÁÉÍÓÚÜÑáéíóúüñ ]{3,50}$" 
+                      aria-describedby="nombreError"/>
+                    <div id="nombreError" class="invalid-feedback"></div>
+                    <div class="valid-feedback">¡Se ve bien!</div>
                   </div>
 
                   <div class="mb-3">
@@ -87,9 +84,15 @@
                       class="form-control"
                       placeholder="Dirección de envío"
                       required
-                    />
+                      minlength="3"
+                      maxlength="150"
+                      pattern="^[A-Za-zÁÉÍÓÚÜÑáéíóúüñ0-9 ,.#-]{3,150}$" 
+                      aria-describedby="direccionError" />
+                    <div id="direccionError" class="invalid-feedback"></div>
+                    <div class="valid-feedback">¡Se ve bien!</div>
                   </div>
 
+                 
                   <div class="mb-4">
                     <label for="email" class="form-label"
                       >Correo electrónico</label
@@ -101,7 +104,10 @@
                       class="form-control"
                       placeholder="nombre@ejemplo.com"
                       required
+                      aria-describedby="emailError"
                     />
+                  <div id="emailError" class="invalid-feedback"></div>
+                  <div class="valid-feedback">¡Correo válido!</div>
                   </div>
 
                   <div
@@ -126,29 +132,10 @@
       <p>&copy; 2025 Bazar Home</p>
     </footer>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const form = document.getElementById("form-confirmacion");
-
-        if (!form) return;
-
-        form.addEventListener("submit", function (e) {
-          e.preventDefault();
-
-          alert(
-            "¡Gracias por tu compra!\n\nPronto nos pondremos en contacto para coordinar la entrega."
-          );
-        });
-      });
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
- 
     <script type="module" src="../assets/js/carrito-utils.js"></script>
     <script type="module" src="../assets/js/menu.js"></script>
-
-   
-    <script src="../assets/js/validacioncompra.js?v=2" defer></script>
+    <script src="../assets/js/validacioncompra.js" defer></script>
   </body>
 </html>
